// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CustomSection generateCustomSection Versions 1.9, with handler, all properties 1`] = `
Object {
  "body": Object {
    "sections": Object {
      "ExistingCustomSection": Object {
        "position": Object {
          "anchor": "IncidentOverviewFacet",
          "placement": "Before",
        },
        "template": "sapux.fe.fpm.writer.test.extensions.custom.Custom1",
        "title": "Custom Title",
      },
      "NewCustomSection": Object {
        "position": Object {
          "anchor": "DummyFacet",
          "placement": "After",
        },
        "template": "sapux.fe.fpm.writer.test.extensions.custom.NewCustomSection",
        "title": "New Custom Section",
      },
    },
  },
}
`;

exports[`CustomSection generateCustomSection Versions 1.9, with handler, all properties 2`] = `
"<core:FragmentDefinition xmlns:core=\\"sap.ui.core\\" xmlns=\\"sap.m\\">
	<Button core:require=\\"{ handler: 'sapux/fe/fpm/writer/test/extensions/custom/NewCustomSection'}\\" text=\\"NewCustomSection\\" press=\\"handler.onPress\\" />
</core:FragmentDefinition>"
`;

exports[`CustomSection generateCustomSection Versions 1.9, with handler, all properties 3`] = `
"sap.ui.define([
    \\"sap/m/MessageToast\\"
], function(MessageToast) {
    'use strict';

    return {
        onPress: function() {
            MessageToast.show(\\"Custom handler invoked.\\");
        }
    };
});
"
`;

exports[`CustomSection generateCustomSection Versions 1.9, with handler, all properties 4`] = `
Object {
  "body": Object {
    "sections": Object {
      "ExistingCustomSection": Object {
        "position": Object {
          "anchor": "IncidentOverviewFacet",
          "placement": "Before",
        },
        "template": "sapux.fe.fpm.writer.test.extensions.custom.Custom1",
        "title": "Custom Title",
      },
      "NewCustomSection": Object {
        "position": Object {
          "anchor": "DummyFacet",
          "placement": "After",
        },
        "template": "sapux.fe.fpm.writer.test.extensions.custom.NewCustomSection",
        "title": "New Custom Section",
      },
    },
  },
}
`;

exports[`CustomSection generateCustomSection Versions 1.9, with handler, all properties 5`] = `
"<core:FragmentDefinition xmlns:core=\\"sap.ui.core\\" xmlns=\\"sap.m\\">
	<Button core:require=\\"{ handler: 'sapux/fe/fpm/writer/test/extensions/custom/NewCustomSection'}\\" text=\\"NewCustomSection\\" press=\\"handler.onPress\\" />
</core:FragmentDefinition>"
`;

exports[`CustomSection generateCustomSection Versions 1.9, with handler, all properties 6`] = `
"sap.ui.define([
    \\"sap/m/MessageToast\\"
], function(MessageToast) {
    'use strict';

    return {
        onPress: function() {
            MessageToast.show(\\"Custom handler invoked.\\");
        }
    };
});
"
`;

exports[`CustomSection generateCustomSection Versions 1.84, with handler, all properties 1`] = `
Object {
  "body": Object {
    "sections": Object {
      "ExistingCustomSection": Object {
        "position": Object {
          "anchor": "IncidentOverviewFacet",
          "placement": "Before",
        },
        "template": "sapux.fe.fpm.writer.test.extensions.custom.Custom1",
        "title": "Custom Title",
      },
      "NewCustomSection": Object {
        "name": "sapux.fe.fpm.writer.test.extensions.custom.NewCustomSection",
        "position": Object {
          "anchor": "DummyFacet",
          "placement": "After",
        },
        "title": "New Custom Section",
        "type": "XMLFragment",
      },
    },
  },
}
`;

exports[`CustomSection generateCustomSection Versions 1.84, with handler, all properties 2`] = `
"<core:FragmentDefinition xmlns:core=\\"sap.ui.core\\" xmlns=\\"sap.m\\">
	<Button core:require=\\"{ handler: 'sapux/fe/fpm/writer/test/extensions/custom/NewCustomSection'}\\" text=\\"NewCustomSection\\" press=\\"handler.onPress\\" />
</core:FragmentDefinition>"
`;

exports[`CustomSection generateCustomSection Versions 1.84, with handler, all properties 3`] = `
"sap.ui.define([
    \\"sap/m/MessageToast\\"
], function(MessageToast) {
    'use strict';

    return {
        onPress: function() {
            MessageToast.show(\\"Custom handler invoked.\\");
        }
    };
});
"
`;

exports[`CustomSection generateCustomSection Versions 1.85, with handler, all properties 1`] = `
Object {
  "body": Object {
    "sections": Object {
      "ExistingCustomSection": Object {
        "position": Object {
          "anchor": "IncidentOverviewFacet",
          "placement": "Before",
        },
        "template": "sapux.fe.fpm.writer.test.extensions.custom.Custom1",
        "title": "Custom Title",
      },
      "NewCustomSection": Object {
        "name": "sapux.fe.fpm.writer.test.extensions.custom.NewCustomSection",
        "position": Object {
          "anchor": "DummyFacet",
          "placement": "After",
        },
        "title": "New Custom Section",
        "type": "XMLFragment",
      },
    },
  },
}
`;

exports[`CustomSection generateCustomSection Versions 1.85, with handler, all properties 2`] = `
"<core:FragmentDefinition xmlns:core=\\"sap.ui.core\\" xmlns=\\"sap.m\\">
	<Button core:require=\\"{ handler: 'sapux/fe/fpm/writer/test/extensions/custom/NewCustomSection'}\\" text=\\"NewCustomSection\\" press=\\"handler.onPress\\" />
</core:FragmentDefinition>"
`;

exports[`CustomSection generateCustomSection Versions 1.85, with handler, all properties 3`] = `
"sap.ui.define([
    \\"sap/m/MessageToast\\"
], function(MessageToast) {
    'use strict';

    return {
        onPress: function() {
            MessageToast.show(\\"Custom handler invoked.\\");
        }
    };
});
"
`;

exports[`CustomSection generateCustomSection Versions 1.86, with handler, all properties 1`] = `
Object {
  "body": Object {
    "sections": Object {
      "ExistingCustomSection": Object {
        "position": Object {
          "anchor": "IncidentOverviewFacet",
          "placement": "Before",
        },
        "template": "sapux.fe.fpm.writer.test.extensions.custom.Custom1",
        "title": "Custom Title",
      },
      "NewCustomSection": Object {
        "position": Object {
          "anchor": "DummyFacet",
          "placement": "After",
        },
        "template": "sapux.fe.fpm.writer.test.extensions.custom.NewCustomSection",
        "title": "New Custom Section",
      },
    },
  },
}
`;

exports[`CustomSection generateCustomSection Versions 1.86, with handler, all properties 2`] = `
"<core:FragmentDefinition xmlns:core=\\"sap.ui.core\\" xmlns=\\"sap.m\\">
	<Button core:require=\\"{ handler: 'sapux/fe/fpm/writer/test/extensions/custom/NewCustomSection'}\\" text=\\"NewCustomSection\\" press=\\"handler.onPress\\" />
</core:FragmentDefinition>"
`;

exports[`CustomSection generateCustomSection Versions 1.86, with handler, all properties 3`] = `
"sap.ui.define([
    \\"sap/m/MessageToast\\"
], function(MessageToast) {
    'use strict';

    return {
        onPress: function() {
            MessageToast.show(\\"Custom handler invoked.\\");
        }
    };
});
"
`;

exports[`CustomSection generateCustomSection custom control 1`] = `
Object {
  "body": Object {
    "sections": Object {
      "ExistingCustomSection": Object {
        "position": Object {
          "anchor": "IncidentOverviewFacet",
          "placement": "Before",
        },
        "template": "sapux.fe.fpm.writer.test.extensions.custom.Custom1",
        "title": "Custom Title",
      },
      "NewCustomSection": Object {
        "position": Object {
          "anchor": "DummyFacet",
          "placement": "After",
        },
        "template": "sapux.fe.fpm.writer.test.extensions.custom.NewCustomSection",
        "title": "New Custom Section",
      },
    },
  },
}
`;

exports[`CustomSection generateCustomSection custom control 2`] = `
"<core:FragmentDefinition xmlns:core=\\"sap.ui.core\\" xmlns=\\"sap.m\\">
	<CustomXML text=\\"\\" />
</core:FragmentDefinition>"
`;

exports[`CustomSection generateCustomSection different data and not existing target 1`] = `
Object {
  "dummy": Object {
    "options": Object {
      "settings": Object {
        "content": Object {
          "body": Object {
            "sections": Object {
              "DummySection": Object {
                "position": Object {
                  "anchor": "NewDummyFacet",
                  "placement": "Before",
                },
                "template": "sapux.fe.fpm.writer.test.extensions.custom.DummySection",
                "title": "Dummy Section",
              },
            },
          },
        },
      },
    },
  },
  "sample": Object {
    "id": "Default",
    "name": "sap.fe.templates.ObjectPage",
    "options": Object {
      "settings": Object {
        "content": Object {
          "body": Object {
            "sections": Object {
              "ExistingCustomSection": Object {
                "position": Object {
                  "anchor": "IncidentOverviewFacet",
                  "placement": "Before",
                },
                "template": "sapux.fe.fpm.writer.test.extensions.custom.Custom1",
                "title": "Custom Title",
              },
            },
          },
        },
        "entitySet": "RootEntity",
      },
    },
    "type": "Component",
    "viewLevel": 1,
  },
}
`;

exports[`CustomSection generateCustomSection different data and not existing target 2`] = `
"<core:FragmentDefinition xmlns:core=\\"sap.ui.core\\" xmlns=\\"sap.m\\">
	<Text text=\\"DummySection\\" />
</core:FragmentDefinition>"
`;

exports[`CustomSection generateCustomSection no handler, all properties 1`] = `
Object {
  "body": Object {
    "sections": Object {
      "ExistingCustomSection": Object {
        "position": Object {
          "anchor": "IncidentOverviewFacet",
          "placement": "Before",
        },
        "template": "sapux.fe.fpm.writer.test.extensions.custom.Custom1",
        "title": "Custom Title",
      },
      "NewCustomSection": Object {
        "position": Object {
          "anchor": "DummyFacet",
          "placement": "After",
        },
        "template": "sapux.fe.fpm.writer.test.extensions.custom.NewCustomSection",
        "title": "New Custom Section",
      },
    },
  },
}
`;

exports[`CustomSection generateCustomSection no handler, all properties 2`] = `
"<core:FragmentDefinition xmlns:core=\\"sap.ui.core\\" xmlns=\\"sap.m\\">
	<Text text=\\"NewCustomSection\\" />
</core:FragmentDefinition>"
`;

exports[`CustomSection generateCustomSection no handler, no fs, all properties 1`] = `
Object {
  "body": Object {
    "sections": Object {
      "ExistingCustomSection": Object {
        "position": Object {
          "anchor": "IncidentOverviewFacet",
          "placement": "Before",
        },
        "template": "sapux.fe.fpm.writer.test.extensions.custom.Custom1",
        "title": "Custom Title",
      },
      "NewCustomSection": Object {
        "position": Object {
          "anchor": "DummyFacet",
          "placement": "After",
        },
        "template": "sapux.fe.fpm.writer.test.extensions.custom.NewCustomSection",
        "title": "New Custom Section",
      },
    },
  },
}
`;

exports[`CustomSection generateCustomSection no handler, no fs, all properties 2`] = `
"<core:FragmentDefinition xmlns:core=\\"sap.ui.core\\" xmlns=\\"sap.m\\">
	<Text text=\\"NewCustomSection\\" />
</core:FragmentDefinition>"
`;

exports[`CustomSection generateCustomSection with existing handler, all properties 1`] = `
Object {
  "body": Object {
    "sections": Object {
      "ExistingCustomSection": Object {
        "position": Object {
          "anchor": "IncidentOverviewFacet",
          "placement": "Before",
        },
        "template": "sapux.fe.fpm.writer.test.extensions.custom.Custom1",
        "title": "Custom Title",
      },
      "NewCustomSection": Object {
        "position": Object {
          "anchor": "DummyFacet",
          "placement": "After",
        },
        "template": "sapux.fe.fpm.writer.test.extensions.custom.NewCustomSection",
        "title": "New Custom Section",
      },
    },
  },
}
`;

exports[`CustomSection generateCustomSection with handler, all properties 1`] = `
Object {
  "body": Object {
    "sections": Object {
      "ExistingCustomSection": Object {
        "position": Object {
          "anchor": "IncidentOverviewFacet",
          "placement": "Before",
        },
        "template": "sapux.fe.fpm.writer.test.extensions.custom.Custom1",
        "title": "Custom Title",
      },
      "NewCustomSection": Object {
        "position": Object {
          "anchor": "DummyFacet",
          "placement": "After",
        },
        "template": "sapux.fe.fpm.writer.test.extensions.custom.NewCustomSection",
        "title": "New Custom Section",
      },
    },
  },
}
`;

exports[`CustomSection generateCustomSection with handler, all properties 2`] = `
"<core:FragmentDefinition xmlns:core=\\"sap.ui.core\\" xmlns=\\"sap.m\\">
	<Button core:require=\\"{ handler: 'sapux/fe/fpm/writer/test/extensions/custom/NewCustomSection'}\\" text=\\"NewCustomSection\\" press=\\"handler.onPress\\" />
</core:FragmentDefinition>"
`;

exports[`CustomSection generateCustomSection with handler, all properties 3`] = `
"sap.ui.define([
    \\"sap/m/MessageToast\\"
], function(MessageToast) {
    'use strict';

    return {
        onPress: function() {
            MessageToast.show(\\"Custom handler invoked.\\");
        }
    };
});
"
`;
